# ChangeLog for app-crypt/WiRouterKeyRec
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/WiRouterKeyRec/ChangeLog,v 1.9 2011/06/08 19:36:28 c1pher Exp $

  08 Jun 2011; Dane Smith <c1pher@gentoo.org> -WiRouterKeyRec-1.0.3.ebuild:
  Drop old.

  08 Jun 2011; Markus Meier <maekke@gentoo.org> WiRouterKeyRec-1.0.5.ebuild:
  x86 stable, bug #369401

  05 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
  WiRouterKeyRec-1.0.5.ebuild:
  Stable on amd64 wrt bug #369401

*WiRouterKeyRec-1.0.5 (03 May 2011)

  03 May 2011; Dane Smith <c1pher@gentoo.org> -WiRouterKeyRec-1.0.4.ebuild,
  +WiRouterKeyRec-1.0.5.ebuild:
  Version bump to 1.0.5. Remove old.

*WiRouterKeyRec-1.0.4 (22 Apr 2011)

  22 Apr 2011; Dane Smith <c1pher@gentoo.org> +WiRouterKeyRec-1.0.4.ebuild:
  Version bump to 1.0.4. Thanks Agostino.

  11 Mar 2011; Thomas Kahle <tomka@gentoo.org> WiRouterKeyRec-1.0.3.ebuild:
  x86 stable per bug 355197

  21 Feb 2011; Dane Smith <c1pher@gentoo.org> WiRouterKeyRec-1.0.3.ebuild:
  Fix typo in DESCRIPTION wrt bug 355591.

  17 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  WiRouterKeyRec-1.0.3.ebuild:
  Stable on amd64 wrt bug #355197

*WiRouterKeyRec-1.0.3 (19 Jan 2011)

  19 Jan 2011; Dane Smith <c1pher@gentoo.org> +WiRouterKeyRec-1.0.3.ebuild,
  +metadata.xml:
  New ebuild for WiRouterKeyRec wrt bug 352115. Thanks to Agostino Sarubbo
  for
  the ebuild. He will proxy-maintain this.
