@@ -2,23 +2,25 @@
 Hash: SHA1
 
 DIST WiRouterKeyRec-1.0.5.zip 34787 RMD160 73b15c8e63e6d4e25b4e414081012ecb9d9867ff SHA1 993845e66d38134df159836aa405d5512c9727fe SHA256 7d23a0f7bcf032a943fbde9b70a53d3dd898c0d01984c5554140abb9cf376096
+DIST WiRouterKeyRec-1.0.6.zip 34982 RMD160 8bdb0f030a32e1f0af10b78a8ee60f1ebc9195a9 SHA1 07fab9541dda97330519a527b27a4ca64ad6a160 SHA256 36f93ac3a131f953870015412cb9611a98d9181131b667fa35f04db3fa5d501c
 EBUILD WiRouterKeyRec-1.0.5.ebuild 876 RMD160 b80ea4e31f2a2da5195e4088aa5066f166150156 SHA1 5cd229b76a6976f90a5934cbbf5a4caef8627667 SHA256 18fa1f781d4b0f14f6534c9b00fa948776cdb0f30b5d1960f1fce0de9e0e9ca2
-MISC ChangeLog 1469 RMD160 e4c16efbc49acee08db2f244dfa2fc37729e20ab SHA1 f98b0870f08f105d5c3bdc6625b1b63080cb2bce SHA256 511f3ebd34fe19ead482487cd21eb6714ca39785d8e29803154b2b801eaea828
+EBUILD WiRouterKeyRec-1.0.6.ebuild 878 RMD160 813e1c369cf85587f00a9c4c8cf59a0b0fbeb15e SHA1 60f8c68e743dbc36c29f336520e0548ac727e42a SHA256 d512611b7ddc0e3c3b16ffc8286a60d3c23a8345e936710de9705b121c2ed491
+MISC ChangeLog 1617 RMD160 a6f5a5cd0201711064510ffbae40466c83a4a47d SHA1 28da40bef90794a1713a2d2a1f3415c0f956940f SHA256 71c755b902794c480ba98305066c6d7e64f82b2daab98b51d5e6144f432474ab
 MISC metadata.xml 406 RMD160 38b95b72014f0451f1e5f4f694b5a38c4098cb33 SHA1 25d22a536f9c1e156be2b21f5096ffb52a8a1a21 SHA256 19beecdf1f0a53cadbacd2215ff193c4b4575dd59cf7d124c72542f0b6e63d2a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJN784YAAoJEEsurZwMLhUxQG8P/12/VlEIcT3fLCHLNud1YW0l
-AAHFp4q+aPQaRi9K7/msFGukgVL5MTCnnXpBCI8a8AGnz0ZHFEfvnEmqF6RmWrbw
-Vky8qELMVETo0dKSlcW3JSfjd4f8N1a3xruAvtoU2MaDwXOJ+9IEhWXRlguU78x8
-2Q5L6PiF58kaVqBRQh2pUIeJuHtg5oAED8/aYkPHXD5q6XXgpYqHikRrgLl+eSb+
-pr3IIlOITbh1rMIPn4WHUHWKsOZnBm/8tT8Wd8UmIOZrSXLNO+MEUG6zO5EF7n+x
-cDdoYP68BGCJND9e/xacOK7GLSUG5Be03874BZc17nWID/VnHZmCWoWpcPJ54qeE
-txOryded75XJ+U1VvSJfIe+tMHHwA/3RoVI6JlavLW5VQvfzijAUdBYvSCgezkRu
-Y6jIDUpOAO3EgSB06h5JcNzzJkcfbdXcsuJ6bMOMaZbfqtIaX4Ftuj07wUHDGLiE
-tvRBkGlJriUXy4Lyyy3F3CdRsq4VolaKHxjkiVMVj6wy2lwfBF2Pg707TSV1bYEM
-N9WU2cfScU4C9fZgXc6+g+pZ8z3o4VM64+zwPKrc/5aHF/RzRHLZnz4AkNFNkF5D
-cUxqvVd9Yye1i2IOOMdU+5aav8kt7aj4pJcn+A5EzlhUJP+BZWfdqx35F8pR/Bmv
-mbkU7JpoGredYecnHRt/
-=8gyu
+iQIcBAEBAgAGBQJN+6XAAAoJEEsurZwMLhUxWbMQAIm9HVcbLtj78pNtvMV3dYKe
+WjGEABIcIWsfiVoSz0GzNltQauzanTyvMlkwYGLtxo1jgSIdpKqkqOB4ku8yoUC5
+6+CPXXFKnZnmsxPqyhQvgWoyQZBAXIA9eOhaDw8EWRSp5UOyPphb6cnkl8k1iYFg
+/8gVv5tC//CULdwbCDVLAmkqw0mCPBybx4ZP6LfYHkEoJN6aS54bvBboa2kWZSo3
+AW7u8PgDqZW4y56NBKzmQ2B0oNBr4WJl9V7BHbZqAQI7TI1UamHU0suetXYbZ+7/
+FO0WqfBMzCnN+0ydBwpAteL7RDuf8FcROwi1zj8EM1/XpkGVjjJk7ELr5/ueineo
++bU12T+LJnC6WBD0PO2baf548GCVAGfzt5mLLNIM1X+uScb4SurcSKGXsFT3u78X
+vGk+3r8Aboepl5ZbazqAYdiXsy6F9j2aJUAjgPmO/65rB6mxAy2eCIOLQIZpQmjt
+UuyqTOo4lw0di1NM+LcCh3uv6YAPkDhq2j+zd/XOFVt3qoi1+xpdorhQfREh1QkL
+tD8PqAYM2TNlfqHhYcFLG2SpuEyQMG7OLfJM2vI5lVfWXtCv8VZyRCcilODWve8c
+1pe4IiX+uuxA4Zwg+G8qW+F/kEXBNNvpI3c0RTZyP+5Yl3LWrF4YUX7+bnlvhJSp
+VXU+eiOQxj/GlW0HSE7h
+=I/ML
 -----END PGP SIGNATURE-----
